--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-<canvas id="myCanvas" width="500" height="500" style="border:1px solid #000;"></canvas>
+<canvas id="myCanvas" width="500" height="500"></canvas>
 
-<script type="module" src="./main.js"></script>
+<script type="module" src="main.js"></script>
 
 </body>
 </html>
