--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-<canvas id="myCanvas" width="500" height="500"></canvas>
+
+<div id="content">
+    <div id="color"></div>
+    <canvas id="myCanvas" width="500" height="500"></canvas>
+</div>
 
 <script type="module" src="main.js"></script>
 
