--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,20 @@
 <body>
 
 <div id="content">
-    <div id="color"></div>
-    <canvas id="myCanvas" width="500" height="500"></canvas>
+    <div class="left">
+        <div id="foo"></div>
+        <canvas id="overviewCanvas" width="100" height="100"></canvas>
+    </div>
+    <div class="center">
+        <div id="color"></div>
+        <canvas id="myCanvas" width="500" height="500"></canvas>
+    </div>
+    <div class="right">
+        <div>
+            <p>Punkte: <span id="points">0</span></p>
+        </div>
+        <div>unten</div>
+    </div>
 </div>
 
 <script type="module" src="main.js"></script>
